--- a/style.css
+++ b/style.css
@@ -8,22 +8,13 @@
     width: 150px;
     height: 200px;
 }
+header {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .hidden {
     display: none;
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-input {
-    flex-direction: row;
-}
-
-img (
-    margin-left: auto;
-    margin-right: auto;
-)
