--- a/style.css
+++ b/style.css
@@ -2,19 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: rgb(241, 160, 241);
 }
 
 .main-picture {
     width: 150px;
     height: 200px;
-}
-header {
-    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .hidden {
     display: none;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+
+}
+
+h1 {
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+button {
+    width: 100%;
+    
 }
 
