--- a/style.css
+++ b/style.css
@@ -30,10 +30,20 @@ form {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 20px; 
+    line-height: 2em;
+    font-weight: bold; 
 }
+
+input {
+    border: 2px solid rgb(73, 8, 73);
+}
+
 
 button {
     width: 100%;
+    height: 30px;
+    font-weight: bolder;
     
 }
 
